executable(
    'wlstream',
    'wlstream.c',
    install: true,
    dependencies: [wayland_client,
                   wlstream_protos,
                   libavutil,
                   libavcodec,
                   libpulse,
                   libavformat,
                   libswresample,
                   pthreads,
                   libm, ]
)
